--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/images/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Note Taking web app</title>
+    <title>Notes App</title>
   </head>
   <body class="bg-white leading-[1.2]">
     <div id="root"></div>
