--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body class="bg-white leading-[1.2]">
     <div id="root"></div>
+    <div id="modal-root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
